[package]
name = "hearth"
version = "0.0.7"
edition = "2018"

[dependencies]
rand = "0.7"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
toml = "0.5"
actix = "0.10"
actix-rt = "1"
actix-web = "3"
actix-files = "0.5"
actix-web-actors = "3"
ssh2 = "0.9"
derive_more = "0.99"

[profile.release]
lto = "thin"
opt-level = 3

[workspace]
