[package]
name = "hearth"
version = "0.0.9"
edition = "2021"

[dependencies]
rand = "0.9"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
serde = "1"
serde_json = "1"
serde_derive = "1"
toml = "0.8"
actix = "0.13"
actix-rt = "2"
actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4"
ssh2 = "0.9"
derive_more = { version = "1.0.0", features = ["add"] }

[profile.release]
lto = "thin"
opt-level = 3

[workspace]
